--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "14.5.0"
+  },
   "dependencies": {
     "ejs": "^3.1.3",
     "express": "^4.17.1",
